--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "[5 rows x 96 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
        "Actua_Low_Risk                   5443               11675"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1105,92 +1105,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'loan_status': 1})"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Resample the training data with SMOTE\n",
-    "# YOUR CODE HERE"
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "X_resampledSMOTE, y_resampleSMOTE = SMOTE(random_state=1, sampling_strategy='auto').fit_resample(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(random_state=1)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "model = LogisticRegression(random_state=1)\n",
+    "\n",
+    "model.fit(X_resampledSMOTE, y_resampleSMOTE)\n",
+    "y_pred_SMOTE = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.662394124702461"
+       "0.6234433606890912"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "acc_scoreSMOTE = balanced_accuracy_score(y_test, y_pred_SMOTE)\n",
+    "acc_scoreSMOTE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted_High_Risk</th>\n",
+       "      <th>Predicted_Low_Risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual_High_Risk</th>\n",
+       "      <td>53</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual_Low_Risk</th>\n",
+       "      <td>6202</td>\n",
+       "      <td>10916</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[   64,    37],\n",
-       "       [ 5283, 11821]])"
+       "                  Predicted_High_Risk  Predicted_Low_Risk\n",
+       "Actual_High_Risk                   53                  34\n",
+       "Actual_Low_Risk                  6202               10916"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "matrix_SMOTE = confusion_matrix(y_test, y_pred_SMOTE)\n",
+    "\n",
+    "cm_SMOTE_df = pd.DataFrame(\n",
+    "    matrix_SMOTE, index=[\"Actual_High_Risk\", \"Actual_Low_Risk\"], columns=[\"Predicted_High_Risk\", \"Predicted_Low_Risk\"])\n",
+    "cm_SMOTE_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1199,17 +1228,17 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.63      0.69      0.02      0.66      0.44       101\n",
-      "   low_risk       1.00      0.69      0.63      0.82      0.66      0.44     17104\n",
+      "  high_risk       0.01      0.61      0.64      0.02      0.62      0.39        87\n",
+      "   low_risk       1.00      0.64      0.61      0.78      0.62      0.39     17118\n",
       "\n",
-      "avg / total       0.99      0.69      0.63      0.81      0.66      0.44     17205\n",
+      "avg / total       0.99      0.64      0.61      0.77      0.62      0.39     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred_SMOTE))"
    ]
   },
   {
@@ -1231,20 +1260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'loan_status': 1})"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
@@ -1253,20 +1271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(random_state=1)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "# YOUR CODE HERE"
@@ -1274,20 +1281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5442166848817717"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculated the balanced accuracy score\n",
     "# YOUR CODE HERE"
@@ -1295,21 +1291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   68,    33],\n",
-       "       [10003,  7101]])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display the confusion matrix\n",
     "# YOUR CODE HERE"
@@ -1317,23 +1301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   pre       rec       spe        f1       geo       iba       sup\n",
-      "\n",
-      "  high_risk       0.01      0.67      0.42      0.01      0.53      0.29       101\n",
-      "   low_risk       1.00      0.42      0.67      0.59      0.53      0.27     17104\n",
-      "\n",
-      "avg / total       0.99      0.42      0.67      0.58      0.53      0.27     17205\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print the imbalanced classification report\n",
     "# YOUR CODE HERE"
@@ -1358,20 +1328,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'loan_status': 1})"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
@@ -1380,20 +1339,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(random_state=1)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "# YOUR CODE HERE"
@@ -1401,20 +1349,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6400726134353378"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculated the balanced accuracy score\n",
     "# YOUR CODE HERE"
@@ -1422,21 +1359,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  71,   30],\n",
-       "       [7232, 9872]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display the confusion matrix\n",
     "# YOUR CODE HERE"
@@ -1444,23 +1369,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   pre       rec       spe        f1       geo       iba       sup\n",
-      "\n",
-      "  high_risk       0.01      0.70      0.58      0.02      0.64      0.41       101\n",
-      "   low_risk       1.00      0.58      0.70      0.73      0.64      0.40     17104\n",
-      "\n",
-      "avg / total       0.99      0.58      0.70      0.73      0.64      0.40     17205\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print the imbalanced classification report\n",
     "# YOUR CODE HERE"
